fix: overwrite h-screen to use on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,11 @@ html {
   scroll-behavior: smooth;
 }
 
+.h-screen {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
+
 @layer base {
   html {
     font-family: "Inter", sans-serif;
